@@ -1,3 +1,8 @@
+2013-07-29  Man Page  <simsong@mncrnpsedu.local>
+
+	* src/scan_zip.cpp (scan_zip_component): now records general_purpose_bit_flags in XML. Bit 1 indicates that a component is encrypted
+	(scan_zip_component): removed max_depth check; it's in plugin system
+
 2013-07-17  Basic  <simsong@sg1.ncr.nps.edu>
 
 	* src/scan_windirs.cpp (scan_windirs): windirs now only runs at top level
